# ofxStableDiffusion

./: .gitignore  CHANGELOG.md  Doxyfile  README.md  addon_config.mk  ofxStableDiffusion.lua
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_REVIEW_2026.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  FEATURE_SUGGESTIONS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_GUIDE.md  NATIVE_BUILD.md  OFXGGML_BRIDGE.md  PHASE3_SUMMARY.md  TROUBLESHOOTING.md  V1.3.0_RELEASE_NOTES.md  VIDEO_ANIMATION_EXAMPLES.md  VIDEO_ANIMATION_IMPLEMENTATION.md  VIDEO_GENERATION_IMPROVEMENTS.md
examples/basic_generation/: README.md
examples/basic_generation/src/: ofApp.cpp  ofApp.h
examples/cancellation_example/: README.md  addons.make
examples/cancellation_example/src/: ofApp.cpp  ofApp.h
include/: stable-diffusion.h
libs/stable-diffusion.cpp/: stable-diffusion.h
libs/stable-diffusion.cpp/lib/vs/: ggml.lib  stable-diffusion.lib
libs/stable-diffusion.cpp/stable-diffusion.cpp/: stable-diffusion.h
libs/stable-diffusion.cpp/stable-diffusion.cpp/lib/vs/: ggml.lib
libs/stable-diffusion/include/: stable-diffusion.h
libs/stable-diffusion/lib/vs/: stable-diffusion.lib
libs/stable-diffusion/source/: CMakeLists.txt  OFX_VENDOR_PIN.txt  README.md
libs/stable-diffusion/source/examples/server/frontend/: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
libs/stable-diffusion/source/ggml/: CMakeLists.txt  OFX_VENDOR_PIN.txt  README.md  ggml.pc.in
libs/stable-diffusion/source/ggml/.github/workflows/: ci.yml  release.yml
libs/stable-diffusion/source/ggml/ci/: run.sh
libs/stable-diffusion/source/ggml/examples/gpt-2/: main-alloc.cpp  main-backend.cpp  main-batched.cpp  main-ctx.cpp  main-sched.cpp
libs/stable-diffusion/source/ggml/scripts/: release.sh  sync-llama-am.sh  sync-llama.last  sync-llama.sh  sync-whisper-am.sh  sync-whisper.last  sync-whisper.sh
libs/stable-diffusion/source/ggml/tests/: test-backend-ops.cpp
libs/stable-diffusion/source/src/: convert.cpp  stable-diffusion.cpp  util.cpp
ofxStableDiffusionExample/: ofxStableDiffusionExample.vcxproj  ofxStableDiffusionExample.vcxproj.filters
ofxStableDiffusionExample/src/: main.cpp  ofApp.cpp  ofApp.h  ofxStableDiffusion.cpp  ofxStableDiffusion.h  stableDiffusionThread.cpp  stableDiffusionThread.h
ofxStableDiffusionImGuiExample/: addons.make
ofxStableDiffusionImGuiExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxStableDiffusionImg2ImgExample/src/: main.cpp  ofApp.cpp  ofApp.h  stableDiffusionThread.cpp  stableDiffusionThread.h
ofxStableDiffusionTxt2ImgExample/: addons.make
ofxStableDiffusionTxt2ImgExample/src/: main.cpp  ofApp.cpp  ofApp.h  stableDiffusionThread.cpp  stableDiffusionThread.h
ofxStableDiffusionTxt2ImgImGuiExample/: addons.make  config.make
ofxStableDiffusionTxt2ImgImGuiExample/src/: main.cpp  ofApp.cpp  ofApp.h  stableDiffusionThread.cpp
scripts/: build-stable-diffusion.bat  build-stable-diffusion.ps1  build-stable-diffusion.sh  download-stable-diffusion-release.ps1  refresh-stable-diffusion-source.ps1  run-tests.bat  run-tests.ps1  run-tests.sh  run_benchmarks.bat  run_benchmarks.py  run_benchmarks.sh  select-stable-diffusion-backend.bat  select-stable-diffusion-backend.ps1  setup_addon.ps1  setup_windows.bat
src/: ofxStableDiffusion.cpp  ofxStableDiffusion.h  ofxStableDiffusionThread.cpp  ofxStableDiffusionThread.h  stableDiffusionThread.cpp  stableDiffusionThread.h
src/bridges/: ofxStableDiffusionGgmlBridge.h  ofxStableDiffusionHoloscanBridge.cpp  ofxStableDiffusionHoloscanBridge.h  ofxStableDiffusionHoloscanTypes.h
src/core/: ofxStableDiffusionBatchProcessor.cpp  ofxStableDiffusionBatchProcessor.h  ofxStableDiffusionCapabilityHelpers.h  ofxStableDiffusionEnums.h  ofxStableDiffusionImageHelpers.h  ofxStableDiffusionLimits.h  ofxStableDiffusionMemoryHelpers.h  ofxStableDiffusionModelManager.cpp  ofxStableDiffusionModelManager.h  ofxStableDiffusionNativeAdapter.h  ofxStableDiffusionNativeApi.h  ofxStableDiffusionParameterTuningHelpers.h  ofxStableDiffusionPerformanceProfiler.cpp  ofxStableDiffusionPerformanceProfiler.h  ofxStableDiffusionProgressTracker.cpp  ofxStableDiffusionProgressTracker.h  ofxStableDiffusionPromptHelpers.cpp  ofxStableDiffusionPromptHelpers.h  ofxStableDiffusionQuantization.cpp  ofxStableDiffusionQuantization.h  ofxStableDiffusionQueue.cpp  ofxStableDiffusionQueue.h  ofxStableDiffusionRankingHelpers.h  ofxStableDiffusionRealtimeSession.cpp  ofxStableDiffusionRealtimeSession.h  ofxStableDiffusionRealtimeVideoSession.cpp  ofxStableDiffusionRealtimeVideoSession.h  ofxStableDiffusionSamplingHelpers.cpp  ofxStableDiffusionSamplingHelpers.h  ofxStableDiffusionStringUtils.h  ofxStableDiffusionTypes.h
src/image/: ofxStableDiffusionImageCompositionHelpers.h  ofxStableDiffusionImageWorkflowHelpers.h  ofxStableDiffusionPromptHelpers.h
src/video/: ofxStableDiffusionLongVideoManifest.h  ofxStableDiffusionLongVideoWorkflow.h  ofxStableDiffusionNativeVideoExport.cpp  ofxStableDiffusionNativeVideoExport.h  ofxStableDiffusionVideo.cpp  ofxStableDiffusionVideoAnimation.h  ofxStableDiffusionVideoHelpers.h  ofxStableDiffusionVideoPerformanceHelpers.h  ofxStableDiffusionVideoWorkflowHelpers.h
tests/: CMakeLists.txt  README.md  test_capability_helpers.cpp  test_image_helpers.cpp  test_image_helpers_extended.cpp  test_inpainting_validation.cpp  test_long_video_workflow.cpp  test_lora_discovery.cpp  test_model_manager_integration.cpp  test_multi_controlnet.cpp  test_parameter_tuning_helpers.cpp  test_performance_profiler.cpp  test_ranking_helpers.cpp  test_ranking_helpers_extended.cpp  test_realtime_session.cpp  test_realtime_video_session.cpp  test_sampling_helpers.cpp  test_video_helpers.cpp  test_video_helpers_extended.cpp
tests/integration/: CMakeLists.txt  README.md  test_basic_generation.cpp  test_cancellation.cpp  test_img2img.cpp  test_utils.cpp  test_utils.h
tests/stubs/: README.md  ofMain.h  stable_diffusion_native_stub.cpp
(+53 files in other folders)
